Fixed off-center artwork at low widths.

--- a/src/assets/css/art.css
+++ b/src/assets/css/art.css
@@ -6,12 +6,15 @@
 
 /* Images */
 .artwork {
-    padding: 2rem;
+    display: flex;
     text-align: center;
+    justify-content: center;
+    padding: 2rem;
 }
 
 .artwork img {
-    width: 300px;
+    width: 50vw;
+    max-width: 20rem;
     height: auto;
     border: 4px solid #898277;
     border-radius: 10px;
